# xappy

./: .env.example  .gitignore  README.md  docker-compose.yml  health-check.sh  open-all-websites.sh  start-xappy.sh  stop-xappy.sh
Xappy-Health/backend/: Dockerfile
Xappy-Health/frontend/: next.config.js  tailwind.config.ts
Xappy-Oil/: AGENTS.md  XAPPY.md  docker-compose.local.yml  docker-compose.yml
Xappy-Oil/.claude/: settings.local.json
Xappy-Oil/XappyApp/: AGENTS.md  README.md
Xappy-Oil/frontend/: package.json  (+3 more)
Xappy-Property/: .gitignore  README.md
XappyIO/: .dockerignore  README.md  middleware.ts  package-lock.json  tailwind.config.ts
moodcraft/: .env.example  .gitignore  docker-compose.yml  package-lock.json  package.json  start-local.sh  turbo.json
moodcraft/apps/nlp-service/: .env.example  Dockerfile  main.py  package.json  pyproject.toml  pytest.ini  requirements.txt
moodcraft/apps/nlp-service/agents/: ai_twin_graph.py
moodcraft/apps/nlp-service/core/: config.py
moodcraft/apps/nlp-service/prompts/: ai_twin_prompts.py
moodcraft/apps/nlp-service/routers/: ai_twin.py  memory.py  risk.py  sentiment.py
moodcraft/apps/nlp-service/tests/: __init__.py  conftest.py  test_ai_twin_router.py  test_core_config.py  test_main.py  test_memory_router.py  test_risk_router.py  test_sentiment_router.py
moodcraft/apps/nlp-service/vectorstores/: memory_store.py
scripts/: init-postgres.sql
xapenv/: pyvenv.cfg
xappy-Website/: Dockerfile  docker-compose.local.yml  i18n.ts  middleware.ts  next.config.js  package-lock.json  package.json  tsconfig.json
(+820 files in other folders)
