[project]
name = "cerebro-nlp-service"
version = "0.1.0"
description = "CereBro NLP Microservice - Sentiment analysis, risk detection, and AI brief generation"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "openai==1.54.0",
    "pydantic==2.9.0",
    "redis==5.2.0",
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
    "numpy==2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv.scripts]
dev = "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
start = "uvicorn main:app --host 0.0.0.0 --port 8000"
